# code

./: CMakeLists.txt  Combine_image.py  README.md  main.cpp  multiCount.py  result_2.json
include/: imSynthesis.h
json_example/: example.json
src/: imSynthesis.cpp
